tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/rewrite_authority/tproxy/to_tproxy/_test_context/VirtualService.3702596141.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - tproxy
  http:
  - match:
    - uri:
        exact: /foo
    rewrite:
      authority: new-authority
    route:
    - destination:
        host: tproxy
